# ofac-demo

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
data/: sanctions_data.csv
ofac_demo/: gui.py  ofac_scraper.py  scraper.py
