[tool.poetry]
name = "ofac-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.0"
numpy = "^1.26.4"
selenium = "^4.17.2"
requests = "^2.31.0"
pyarrow = "^15.0.0"
fake-useragent = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
